Updated BERT data loader.

--- a/get_BERT_data.ipynb
+++ b/get_BERT_data.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,26 +380,26 @@
     "        if row.lemma in evaluation_data:\n",
     "            evaluation_data[row.lemma][\"X_data_1\"].append(X_data_1)\n",
     "            evaluation_data[row.lemma][\"X_data_2\"].append(X_data_2)\n",
-    "            evaluation_data[row.lemma][\"y_data\"].append(y_data)\n",
+    "            evaluation_data[row.lemma][\"y_data\"].append([y_data])\n",
     "        else:\n",
     "            evaluation_data[row.lemma] = {}\n",
-    "            evaluation_data[row.lemma][\"X_data_1\"] = X_data_1\n",
-    "            evaluation_data[row.lemma][\"X_data_2\"] = X_data_2\n",
-    "            evaluation_data[row.lemma][\"y_data\"] = y_data\n",
+    "            evaluation_data[row.lemma][\"X_data_1\"] = [X_data_1]\n",
+    "            evaluation_data[row.lemma][\"X_data_2\"] = [X_data_2]\n",
+    "            evaluation_data[row.lemma][\"y_data\"] = [y_data]\n",
     "\n",
     "    return evaluation_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Lemmas to evaluate for:\ndict_keys(['lead.v', 'extend.v', 'regular.a', 'see.v', 'position.n', 'find.v', 'force.n', 'hold.v', 'build.v', 'serve.v', 'keep.v', 'bad.a', 'national.a', 'point.n', 'order.n', 'time.n', 'physical.a', 'professional.a', 'place.n', 'case.n', 'line.n', 'security.n', 'follow.v', 'common.a', 'critical.a', 'positive.a', 'life.n', 'bring.v', 'major.a', 'active.a'])\n\nEvaluation samples per lemma:\n{'lead.v': 524, 'extend.v': 528, 'regular.a': 392, 'see.v': 1337, 'position.n': 446, 'find.v': 462, 'force.n': 556, 'hold.v': 630, 'build.v': 525, 'serve.v': 610, 'keep.v': 1081, 'bad.a': 356, 'national.a': 451, 'point.n': 419, 'order.n': 403, 'time.n': 405, 'physical.a': 387, 'professional.a': 377, 'place.n': 382, 'case.n': 469, 'line.n': 1129, 'security.n': 433, 'follow.v': 664, 'common.a': 358, 'critical.a': 310, 'positive.a': 260, 'life.n': 419, 'bring.v': 496, 'major.a': 311, 'active.a': 282}\n"
+      "Lemmas to evaluate for:\ndict_keys(['lead.v', 'extend.v', 'regular.a', 'see.v', 'position.n', 'find.v', 'force.n', 'hold.v', 'build.v', 'serve.v', 'keep.v', 'bad.a', 'national.a', 'point.n', 'order.n', 'time.n', 'physical.a', 'professional.a', 'place.n', 'case.n', 'line.n', 'security.n', 'follow.v', 'common.a', 'critical.a', 'positive.a', 'life.n', 'bring.v', 'major.a', 'active.a'])\n\nEvaluation samples per lemma:\n{'lead.v': 517, 'extend.v': 522, 'regular.a': 385, 'see.v': 1327, 'position.n': 441, 'find.v': 453, 'force.n': 549, 'hold.v': 620, 'build.v': 516, 'serve.v': 602, 'keep.v': 1071, 'bad.a': 353, 'national.a': 446, 'point.n': 412, 'order.n': 399, 'time.n': 401, 'physical.a': 382, 'professional.a': 373, 'place.n': 376, 'case.n': 462, 'line.n': 1119, 'security.n': 427, 'follow.v': 654, 'common.a': 355, 'critical.a': 306, 'positive.a': 256, 'life.n': 411, 'bring.v': 489, 'major.a': 308, 'active.a': 278}\n"
      ]
     }
    ],
@@ -415,7 +415,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[\"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\",\n",
+       " \"In that regard , Madagascar would like again to emphasize the sound foundation for Africa 's claim to at least two permanent seats , with the appropriate prerogatives , and two additional non-permanent seats , within an expanded 26-member Council . My delegation does not believe that claim to be unrealistic or over-ambitious ; rather , it is justified by the logic of current realities. It is also in keeping with the spirit and principle of the sovereign equality of all the States Members of the United Nations . Since the maintenance of international peace and security is a collective responsibility for all — large and small , rich and poor — scrupulous respect for that principle is essential if the Council is to gain the trust and credibility necessary for the implementation of its resolutions .\"]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "evaluation_data[\"keep.v\"][\"X_data_1\"][2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['He was not a rear-looking conservative , yet partisans of that persuasion will miss him as much as any . Two of the vital qualities demanded of a politician by other politicians are that he always keep a confidence and that he keep his word . Sam Rayburn took unnumbered secrets with him to the grave , for he was never loquacious , and his word , once given , was not subject to retraction .',\n",
+       " 'Action by the Committee In pursuance of its mandate , the Committee will continue to keep under review the situation relating to the question of Palestine and participate in relevant meetings of the General Assembly and the Security Council . The Committee will also continue to monitor the situation on the ground and draw the attention of the international community to urgent developments in the Occupied Palestinian Territory , including East Jerusalem , requiring international action .',\n",
+       " 'Another major cause of concern is the widespread practice of undue prolonged pre-trial detention in police stations as well as in prisons , mainly of suspects charged with felonies . In several districts , there are reports of detainees being kept beyond the legal time limit of 10 days for alleged homicide . In Bo Town , for example , four nurses who allegedly carried out a failed surgical intervention on a patient in the absence of an authorized doctor have been detained at the police station since September 2003 .',\n",
+       " 'If we do , what else ? Do we want to keep “ confidence-building measures ” ? I put the question to the house .',\n",
+       " '( i ) Acknowledges with appreciation the burden that continues to be shouldered by developing and least developed countries hosting refugees , and urges Member States to recognize this valuable contribution to the protection of refugees and to participate in efforts to promote burden sharing and durable solutions ; and further acknowledges the valuable contribution of resettlement countries to providing durable solutions for refugees ; ( j ) Urges Member States , in the light of the extensive needs to be addressed by the Office of the High Commissioner , to respond generously and in a spirit of solidarity , and in a timely manner , to his appeal for resources to meet in full the approved 2008-2009 Biennial Programme Budget ; and to support initiatives to ensure that the Office is resourced in a better and more predictable manner , while keeping “ earmarking ” to a minimum level . Decision on the programme of work of the Standing Committee in 2009',\n",
+       " \"- The alien resident 's status must be normal ; - The information to be recorded in the Saudi passport must match that of the alien 's passport ( if one exists ) and must be in accord with the documents and information available concerning him ; his foreign passport is kept and subsequently returned to him in the event that he returns the Saudi passport ; - The passport is valid for a single trip or for a period of one year for multiple trips ;\",\n",
+       " \"The Court limited its decision to the tax issue involved , commenting : `` It is not our province to pass judgment on the morality of the transaction '' . A portable kerosene range designed for use aboard boats is sold with a special railing to keep it from moving with the motion of the vessel . The Revenue Service said the addition of the attachment does not keep the range from coming under the Federal manufacturers ' excise tax on household-type appliances .\",\n",
+       " \"The Chairman noted that during the previous sessions of the Preparatory Committee summary records had been provided , at each session , for the Committee 's opening meeting , the general debate and the closing meeting . In addition , records had been kept of decisions taken at other meetings . He took it that the Committee wished to proceed accordingly at the current session .\",\n",
+       " \"This regulatory enactment prohibits residents of the Republic of Uzbekistan from making settlements related to export and import operations with foreign partners through such firms ' accounts with foreign banks . When business entities ( individuals and legal entities ) open accounts in banks , a legal file of the client is opened in which documents identifying the client are kept . The legal file includes the following information on the client : a copy of the certificate concerning the State registration of the business entity indicating the personal statistical code and identification number of the taxpayer , and a notarized specimen of the signatures of the director and the head accountant and an impression of the stamp ( Instruction No. 1080 on accounts opened in banks of the Republic of Uzbekistan of 10 November 2001 ) .\",\n",
+       " 'Discrimination of older persons can be apparent in many different ways . For example , in the workplace , older persons may be denied promotional opportunities , have difficulty keeping their jobs , or not given an equal chance during the hiring process simply on the basis of their age . All individuals , including older persons , should have the opportunity to gain a living through engaging in work which is freely chosen or accepted ( Committee on Economic , Social and Cultural Rights General Comment 20 , para .',\n",
+       " 'The Committee notes the launch of the National Education Campaign by the Drug Enforcement Commission but remains concerned at the practice of substance abuse by children , the lack of statistics on this issue and the limited capacities of the specific institutions in the State party to treat drug-addicted children . The Committee recommends that the State party strengthen its efforts to prevent substance abuse by children , giving particular attention to vulnerable groups ; make additional efforts to monitor the incidence of substance abuse and to keep accurate statistics on the phenomenon ; and develop mechanisms and structures through which assistance , including health and rehabilitative assistance , can be provided to children who abuse substances . Street children']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "evaluation_data[\"keep.v\"][\"X_data_2\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
